# flac-test

./: .gitignore  CMakeLists.txt  README.md  install.cmd
conan/: conanfile.txt
src/: decoder.cpp  encoder.cpp
tests/test-1/: .test-1.cmd.un~  test-1.cmd  test-1.cmd~
